# pomodoro

./: .gitignore  README.md  pyproject.toml
src/study-timer/: __init__.py
src/studytimer/: __init__.py  __main__.py  app.py  pomodoro.py  timer.py
