[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "studytimer"
version = "0.1"
authors = [
  { name="nazy00", email="naziya@cybar.dev" },
]
description = "GUI Pomodoro timer created using Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/nazy00/study-timer"
repository = "https://github.com/nazy00/study-timer.git"
documentation = "https://github.com/nazy00/study-timer/blob/main/README.md"